# CID-calculation

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: Nordpool_V2.py  Nordpool_config_input.json  cid_calc_new_method.py  cid_calc_old_method.py
